# BAT-Torrent

./: .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  COMPETITIVE_ANALYSIS.md  LICENSE  MARKETING_PLAN.md  PRIVACY.md  README.de.md  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.ru.md  README.ua.md  README.zh-CN.md  index.html
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  clang-tidy.yml  claude-code-review.yml  claude.yml  codeql.yml  cppcheck.yml  osv-scanner.yml  sanitizers.yml  scorecard.yml  semgrep.yml  store.yml  tsan.yml
docs/: HUB_4.0_PLAN.md
installer/: LICENSE.rtf  batorrent.iss
installer/msix/: AppxManifest.xml
pt/: index.html
ru/: index.html
scripts/: make_release_torrent.py
src/: app.rc  main.cpp  resources.qrc
src/app/: addonmanager.cpp  addonmanager.h  discordrpc.cpp  discoveryservice.cpp  discoveryservice.h  gamesourcemanager.cpp  geoip.cpp  geoip.h  logger.cpp  logger.h  metadataresolver.cpp  nameparser.cpp  notifier.cpp  rssmanager.cpp  rssmanager.h  secretstore.cpp  secretstore.h  translator.cpp  translator.h  updater.cpp  updater.h  utils.h
src/core/: sessionmanager.cpp  sessionmanager.h  translator.cpp
src/gui/: addondialog.cpp  addondialog.h  batwidget.cpp  batwidget.h  createtorrentdialog.cpp  createtorrentdialog.h  detailspanel.cpp  detailspanel.h  diagnosticsdialog.cpp  diagnosticsdialog.h  logviewerdialog.cpp  logviewerdialog.h  mainwindow.cpp  mainwindow.h  pairingdialog.cpp  pairingdialog.h  piecemapwidget.cpp  piecemapwidget.h  posterview.cpp  progressdelegate.cpp  progressdelegate.h  qmlposterbridge.cpp  qmlposterbridge.h  releasenotesdialog.cpp  releasenotesdialog.h  removedhistorydialog.cpp  removedhistorydialog.h  rssdialog.cpp  rssdialog.h  searchdialog.cpp  searchdialog.h  settingsdialog.cpp  settingsdialog.h  shortcutsdialog.cpp  shortcutsdialog.h  speedgraph.cpp  speedgraph.h  speedtestdialog.cpp  speedtestdialog.h  splashwidget.cpp  (+14 more)
src/qml/: AboutDialog.qml  AddAddonDialog.qml  AddTorrentDialog.qml  BatDialog.qml  CreateTorrentDialog.qml  DiagnosticsWindow.qml  DiscoverView.qml  HubView.qml  InputPromptDialog.qml  InspectorDialog.qml  LogViewerWindow.qml  MagnetDialog.qml  Main.qml  NavRail.qml  PairingDialog.qml  PlayerWindow.qml  ReleaseNotesDialog.qml  Splash.qml  (+13 more)
tests/: CMakeLists.txt  drmemory_suppress.txt  test_memory.cpp  test_nameparser.cpp  test_security.cpp  test_unit.cpp
translations/: de.json  en.json  es.json  ja.json  pt.json  ru.json  uk.json  zh.json
(+65 files in other folders)
